--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .card {
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 8px;
-  display: inline-block;
-  height: auto;
+  /* display: inline-block; */
+  /* height: auto; */
   margin: 1rem;
-  position: relative;
-  width: 300px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease-in-out;
+  /* position: relative; */
+  /* width: 300px; */
+  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
+  /* transition: all 0.3s ease-in-out; */
 }
 #divContainer {
   display: flex;
