--- a/style.css
+++ b/style.css
@@ -1,23 +1,15 @@
 .card {
-  /* background-color: #fff; */
   border-radius: 8px;
-  /* display: inline-block; */
-  /* height: auto; */
   margin: 1rem;
-  /* position: relative; */
-  /* width: 300px; */
-  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
-  /* transition: all 0.3s ease-in-out; */
 }
+
 #divContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-/* Define a new class for the button color change */
-/* Add a new class to define the clicked button's color */
 .btn-clicked {
-  background-color: red; /* Change this to the desired color */
+  background-color: red;
   color: white;
 }
