--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .card {
-  /* background-color: #fff; */
   border-radius: 8px;
   margin: 1rem;
 }
@@ -7,6 +6,7 @@
 #divContainer {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: center;
 }
 
